Implementação das alterações do frontend (Configurações)
Signed-off-by: Erinaldo Henrique <hencomjesus@hotmail.com>